--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-contentful": "^4.4.0",
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-sharp": "^2.9.0",
+    "netlify-cli": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.2.1"
